added few links to index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-hello world!
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Test title page</title>
+</head>
+<body>
+    <ul>
+        <li>
+            <a href="https://www.youtube.com">Youtube</a>
+        </li>
+        <li>
+            <a href="https://www.vk.com">VK (vkontakte)</a>
+        </li>
+        <li>
+            <a href="https://www.onliner.by">onliner.by</a>
+        </li>
+    </ul>
+</body>
+</html>
