--- a/index.html
+++ b/index.html
@@ -2,19 +2,42 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Test title page</title>
+
+    <link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="https://www.youtube.com">Youtube</a>
-        </li>
-        <li>
-            <a href="https://www.vk.com">VK (vkontakte)</a>
-        </li>
-        <li>
-            <a href="https://www.onliner.by">onliner.by</a>
-        </li>
-    </ul>
+    <script src="./bootstrap.min.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-xs-6">
+                <div class="card">
+                      <div class="card-body">
+                      <h5 class="card-title">Social networks</h5>
+                      <p class="card-text">Some social networks</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.youtube.com" class="list-group-item list-group-item-action">Youtube</a>
+                          <a href="https://www.vk.com" class="list-group-item list-group-item-action">VKontakte</a>
+                          <a href="https://www.facebook.com" class="list-group-item list-group-item-action">Facebook</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-xs-6">
+                <div class="card">
+                      <div class="card-body">
+                      <h5 class="card-title">News</h5>
+                      <p class="card-text">Some news websites</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.onliner.by" class="list-group-item list-group-item-action">Onliner.by</a>
+                          <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action">Zerkalo.io</a>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
