added header, additional card and links

--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Test title page</title>
+    <title>&#128102; mg page</title>
 
     <link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
 </head>
 <body>
     <script src="./bootstrap.min.js"></script>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">mgelios's start page &#128102;</span>
+        </div>
+    </nav>
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-xs-6">
-                <div class="card">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mb-3 mt-3">
                       <div class="card-body">
                       <h5 class="card-title">Social networks</h5>
                       <p class="card-text">Some social networks</p>
@@ -25,8 +30,33 @@
                       </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-xs-6">
-                <div class="card">
+            <div class="col-lg-4 col-md-6">
+                <div class="card mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">Programming</h5>
+                      <p class="card-text">Programming related resources</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://github.com/" class="list-group-item list-group-item-action">GitHub</a>
+                          <a href="https://leetcode.com/" class="list-group-item list-group-item-action">Leetcode</a>
+                          <a href="https://hackerrank.com/" class="list-group-item list-group-item-action">Hackerrank</a>
+                          <a href="https://baeldung.com/" class="list-group-item list-group-item-action">Baeldung</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">Blogs</h5>
+                      <p class="card-text">Some blogs</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://dotsandbrackets.com/" class="list-group-item list-group-item-action">Dots and brackets</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card mb-3 mt-3">
                       <div class="card-body">
                       <h5 class="card-title">News</h5>
                       <p class="card-text">Some news websites</p>
@@ -34,6 +64,11 @@
                       <div class="list-group list-group-flush">
                           <a href="https://www.onliner.by" class="list-group-item list-group-item-action">Onliner.by</a>
                           <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action">Zerkalo.io</a>
+                          <a href="https://www.habr.com" class="list-group-item list-group-item-action">Habr</a>
+                          <a href="https://www.linux.org.ru" class="list-group-item list-group-item-action">Linux.org.ru</a>
+                          <a href="https://www.medium.com" class="list-group-item list-group-item-action">Medium</a>
+                          <a href="https://3dnews.ru/" class="list-group-item list-group-item-action">3D news</a>
+                          <a href="https://www.render.ru" class="list-group-item list-group-item-action">Render.ru</a>
                       </div>
                 </div>
             </div>
