added emojis to card headers and updated color scheme

--- a/index.html
+++ b/index.html
@@ -18,22 +18,23 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-6">
-                <div class="card mb-3 mt-3">
+                <div class="card text-bg-light mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">Social networks</h5>
+                      <h5 class="card-title">&#128511; Social networks</h5>
                       <p class="card-text">Some social networks</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://www.youtube.com" class="list-group-item list-group-item-action">Youtube</a>
                           <a href="https://www.vk.com" class="list-group-item list-group-item-action">VKontakte</a>
                           <a href="https://www.facebook.com" class="list-group-item list-group-item-action">Facebook</a>
+                          <a href="https://www.pinterest.com/" class="list-group-item list-group-item-action">Pinterest</a>
                       </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="card mb-3 mt-3">
+                <div class="card text-bg-dark mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">Programming</h5>
+                      <h5 class="card-title">&#129327; Programming</h5>
                       <p class="card-text">Programming related resources</p>
                       </div>
                       <div class="list-group list-group-flush">
@@ -41,38 +42,72 @@
                           <a href="https://leetcode.com/" class="list-group-item list-group-item-action">Leetcode</a>
                           <a href="https://hackerrank.com/" class="list-group-item list-group-item-action">Hackerrank</a>
                           <a href="https://baeldung.com/" class="list-group-item list-group-item-action">Baeldung</a>
+                          <a href="https://refactoring.guru/ru" class="list-group-item list-group-item-action">Refactoring Guru</a>
+                          <a href="http://ibash.org.ru/" class="list-group-item list-group-item-action">iBash.org.ru</a>
+                          <a href="https://www.geeksforgeeks.org/" class="list-group-item list-group-item-action">Geeks for geeks</a>
                       </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="card mb-3 mt-3">
+                <div class="card text-bg-secondary mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">Blogs</h5>
+                      <h5 class="card-title">&#128221; Blogs</h5>
                       <p class="card-text">Some blogs</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://dotsandbrackets.com/" class="list-group-item list-group-item-action">Dots and brackets</a>
+                          <a href="https://blog.dahr.ru/" class="list-group-item list-group-item-action">Dahr's blog</a>
+                          <a href="https://kovchinnikov.info/" class="list-group-item list-group-item-action">Kovchinnikov's blog</a>
+                          <a href="https://www.swyx.io/" class="list-group-item list-group-item-action">Swyx</a>
+                          <a href="http://sereja.me/" class="list-group-item list-group-item-action">Sergey Slotin</a>
+                          <a href="https://cupsofcode.com/" class="list-group-item list-group-item-action">Cups of code</a>
+                          <a href="https://vvsevolodovich.dev/" class="list-group-item list-group-item-action">Vladimir Ivanov's blog</a>
                       </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="card mb-3 mt-3">
+                <div class="card text-bg-warning mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">News</h5>
-                      <p class="card-text">Some news websites</p>
+                      <h5 class="card-title">&#128187; IT News</h5>
+                      <p class="card-text">Some it news websites</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://www.onliner.by" class="list-group-item list-group-item-action">Onliner.by</a>
-                          <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action">Zerkalo.io</a>
                           <a href="https://www.habr.com" class="list-group-item list-group-item-action">Habr</a>
                           <a href="https://www.linux.org.ru" class="list-group-item list-group-item-action">Linux.org.ru</a>
                           <a href="https://www.medium.com" class="list-group-item list-group-item-action">Medium</a>
                           <a href="https://3dnews.ru/" class="list-group-item list-group-item-action">3D news</a>
                           <a href="https://www.render.ru" class="list-group-item list-group-item-action">Render.ru</a>
+                          <a href="https://www.devby.io" class="list-group-item list-group-item-action">Dev.by</a>
+                          <a href="https://tproger.ru/" class="list-group-item list-group-item-action">TProger</a>
                       </div>
                 </div>
             </div>
-        </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-info mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128240; Common news</h5>
+                      <p class="card-text">Some common news websites</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.onliner.by" class="list-group-item list-group-item-action">Onliner.by</a>
+                          <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action">Zerkalo.io</a>
+                      </div>
+                </div>
+            </div>
+             <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-primary mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#127911; Podcasts</h5>
+                      <p class="card-text">Some podcasts webasites</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://radio-t.com/" class="list-group-item list-group-item-action">Radio-T</a>
+                          <a href="https://beardycast.com/" class="list-group-item list-group-item-action">Beardycast</a>
+                          <a href="https://podcast.umputun.com/" class="list-group-item list-group-item-action">Umputun weekly podcast</a>
+                      </div>
+                </div>
+            </div>
+       </div>
     </div>
 </body>
 </html>
