--- a/index.html
+++ b/index.html
@@ -10,27 +10,15 @@
 </head>
 <body>
     <script src="./bootstrap.min.js"></script>
+    <script src="./masonry.pkgd.min.js"></script>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">mgelios's start page &#128102;</span>
         </div>
     </nav>
+    <div class="card-columns"></div>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
-                      <div class="card-body">
-                      <h5 class="card-title">&#128511; Social networks</h5>
-                      <p class="card-text">Some social networks</p>
-                      </div>
-                      <div class="list-group list-group-flush">
-                          <a href="https://www.youtube.com" class="list-group-item list-group-item-action">Youtube</a>
-                          <a href="https://www.vk.com" class="list-group-item list-group-item-action">VKontakte</a>
-                          <a href="https://www.facebook.com" class="list-group-item list-group-item-action">Facebook</a>
-                          <a href="https://www.pinterest.com/" class="list-group-item list-group-item-action">Pinterest</a>
-                      </div>
-                </div>
-            </div>
+       <div class="row"  data-masonry='{"percentPosition": true }'>
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-dark mb-3 mt-3">
                       <div class="card-body">
@@ -38,13 +26,13 @@
                       <p class="card-text">Programming related resources</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://github.com/" class="list-group-item list-group-item-action">GitHub</a>
-                          <a href="https://leetcode.com/" class="list-group-item list-group-item-action">Leetcode</a>
-                          <a href="https://hackerrank.com/" class="list-group-item list-group-item-action">Hackerrank</a>
-                          <a href="https://baeldung.com/" class="list-group-item list-group-item-action">Baeldung</a>
-                          <a href="https://refactoring.guru/ru" class="list-group-item list-group-item-action">Refactoring Guru</a>
-                          <a href="http://ibash.org.ru/" class="list-group-item list-group-item-action">iBash.org.ru</a>
-                          <a href="https://www.geeksforgeeks.org/" class="list-group-item list-group-item-action">Geeks for geeks</a>
+                          <a href="https://github.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">Git</span> GitHub</a>
+                          <a href="https://leetcode.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">Leet</span> Leetcode</a>
+                          <a href="https://hackerrank.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">Hacker</span> Hackerrank</a>
+                          <a href="https://baeldung.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">B</span> Baeldung</a>
+                          <a href="https://refactoring.guru/ru" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">RefGuru</span> Refactoring Guru</a>
+                          <a href="http://ibash.org.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">iBash</span> iBash.org.ru</a>
+                          <a href="https://www.geeksforgeeks.org/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">Geeks</span> Geeks for geeks</a>
                       </div>
                 </div>
             </div>
@@ -55,13 +43,39 @@
                       <p class="card-text">Some blogs</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://dotsandbrackets.com/" class="list-group-item list-group-item-action">Dots and brackets</a>
-                          <a href="https://blog.dahr.ru/" class="list-group-item list-group-item-action">Dahr's blog</a>
-                          <a href="https://kovchinnikov.info/" class="list-group-item list-group-item-action">Kovchinnikov's blog</a>
-                          <a href="https://www.swyx.io/" class="list-group-item list-group-item-action">Swyx</a>
-                          <a href="http://sereja.me/" class="list-group-item list-group-item-action">Sergey Slotin</a>
-                          <a href="https://cupsofcode.com/" class="list-group-item list-group-item-action">Cups of code</a>
-                          <a href="https://vvsevolodovich.dev/" class="list-group-item list-group-item-action">Vladimir Ivanov's blog</a>
+                          <a href="https://dotsandbrackets.com/" class="list-group-item list-group-item-action"><span class="badge bg-info">D</span> Dots and brackets</a>
+                          <a href="https://blog.dahr.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">D</span> Dahr's blog</a>
+                          <a href="https://kovchinnikov.info/" class="list-group-item list-group-item-action"><span class="badge bg-info">K</span> Kovchinnikov's blog</a>
+                          <a href="https://www.swyx.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[S]</span> Swyx</a>
+                          <a href="http://sereja.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Sergey Slotin</a>
+                          <a href="https://cupsofcode.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">C</span> Cups of code</a>
+                          <a href="https://vvsevolodovich.dev/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">V</span> Vladimir Ivanov's blog</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-light mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128221; Utils</h5>
+                      <p class="card-text">Some blogs</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://trello.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Trello</a>
+                          <a href="https://notion.so/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[N]</span> Notion</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-light mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128511; Social networks</h5>
+                      <p class="card-text">Some social networks</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.youtube.com" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">You</span> Youtube</a>
+                          <a href="https://www.vk.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">VK</span> VKontakte</a>
+                          <a href="https://www.facebook.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">F</span> Facebook</a>
+                          <a href="https://www.pinterest.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">P</span> Pinterest</a>
                       </div>
                 </div>
             </div>
@@ -72,13 +86,13 @@
                       <p class="card-text">Some it news websites</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://www.habr.com" class="list-group-item list-group-item-action">Habr</a>
-                          <a href="https://www.linux.org.ru" class="list-group-item list-group-item-action">Linux.org.ru</a>
-                          <a href="https://www.medium.com" class="list-group-item list-group-item-action">Medium</a>
-                          <a href="https://3dnews.ru/" class="list-group-item list-group-item-action">3D news</a>
-                          <a href="https://www.render.ru" class="list-group-item list-group-item-action">Render.ru</a>
-                          <a href="https://www.devby.io" class="list-group-item list-group-item-action">Dev.by</a>
-                          <a href="https://tproger.ru/" class="list-group-item list-group-item-action">TProger</a>
+                          <a href="https://www.habr.com" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">H</span> Habr</a>
+                          <a href="https://www.linux.org.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">L</span> Linux.org.ru</a>
+                          <a href="https://www.medium.com" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">M</span> Medium</a>
+                          <a href="https://3dnews.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">3D</span> 3D news</a>
+                          <a href="https://www.render.ru" class="list-group-item list-group-item-action"><span class="badge bg-info">R</span> Render.ru</a>
+                          <a href="https://www.devby.io" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">D</span> Dev.by</a>
+                          <a href="https://tproger.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">TP</span> TProger</a>
                       </div>
                 </div>
             </div>
@@ -89,21 +103,21 @@
                       <p class="card-text">Some common news websites</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://www.onliner.by" class="list-group-item list-group-item-action">Onliner.by</a>
-                          <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action">Zerkalo.io</a>
+                          <a href="https://www.onliner.by" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">O</span> Onliner.by</a>
+                          <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Z</span> Zerkalo.io</a>
                       </div>
                 </div>
             </div>
-             <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-primary mb-3 mt-3">
                       <div class="card-body">
                       <h5 class="card-title">&#127911; Podcasts</h5>
                       <p class="card-text">Some podcasts webasites</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://radio-t.com/" class="list-group-item list-group-item-action">Radio-T</a>
-                          <a href="https://beardycast.com/" class="list-group-item list-group-item-action">Beardycast</a>
-                          <a href="https://podcast.umputun.com/" class="list-group-item list-group-item-action">Umputun weekly podcast</a>
+                          <a href="https://radio-t.com/" class="list-group-item list-group-item-action"><span class="badge bg-info">T</span> Radio-T</a>
+                          <a href="https://beardycast.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">B</span> Beardycast</a>
+                          <a href="https://podcast.umputun.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">U</span> UWP</a>
                       </div>
                 </div>
             </div>
