added few more links, introduced folders for scripts and styles

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#128102; mg page</title>
+    <title>&#128102; start_page</title>
 
-    <link rel="stylesheet" type="text/css" href="./bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./style/bootstrap.min.css">
 </head>
 <body>
-    <script src="./bootstrap.min.js"></script>
-    <script src="./masonry.pkgd.min.js"></script>
+    <script src="./script/bootstrap.min.js"></script>
+    <script src="./script/masonry.pkgd.min.js"></script>
+
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">mgelios's start page &#128102;</span>
@@ -31,7 +32,6 @@
                           <a href="https://hackerrank.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">Hacker</span> Hackerrank</a>
                           <a href="https://baeldung.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">B</span> Baeldung</a>
                           <a href="https://refactoring.guru/ru" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">RefGuru</span> Refactoring Guru</a>
-                          <a href="http://ibash.org.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">iBash</span> iBash.org.ru</a>
                           <a href="https://www.geeksforgeeks.org/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">Geeks</span> Geeks for geeks</a>
                       </div>
                 </div>
@@ -50,18 +50,22 @@
                           <a href="http://sereja.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Sergey Slotin</a>
                           <a href="https://cupsofcode.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">C</span> Cups of code</a>
                           <a href="https://vvsevolodovich.dev/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">V</span> Vladimir Ivanov's blog</a>
+                          <a href="https://phreedom.club/~tolstoevsky/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">T</span> Tolstoevsky</a>
+                          <a href="http://danluu.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">D</span> Danluu</a>
                       </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-light mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#128221; Utils</h5>
-                      <p class="card-text">Some blogs</p>
+                      <h5 class="card-title">&#128296; Utils</h5>
+                      <p class="card-text">Util web resources</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://trello.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Trello</a>
                           <a href="https://notion.so/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[N]</span> Notion</a>
+                          <a href="https://jwt.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">J</span> JWT</a>
+                          <a href="https://translate.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">G-T</span> Google translate</a>
                       </div>
                 </div>
             </div>
@@ -93,6 +97,9 @@
                           <a href="https://www.render.ru" class="list-group-item list-group-item-action"><span class="badge bg-info">R</span> Render.ru</a>
                           <a href="https://www.devby.io" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">D</span> Dev.by</a>
                           <a href="https://tproger.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">TP</span> TProger</a>
+                          <a href="https://phreedom.club/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">Ph</span> Phreedom</a>
+                          <a href="https://dtf.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-info">D</span> DTF</a>
+                          <a href="https://www.ixbt.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">iX</span> iXBT</a>
                       </div>
                 </div>
             </div>
@@ -105,6 +112,10 @@
                       <div class="list-group list-group-flush">
                           <a href="https://www.onliner.by" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">O</span> Onliner.by</a>
                           <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Z</span> Zerkalo.io</a>
+                          <a href="https://www.joyreactor.cc" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">J</span> Joyreactor</a>
+                          <a href="https://www.pikabu.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-success">P</span> Pikabu</a>
+                          <a href="https://www.reddit.com" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">R</span> Reddit</a>
+                          <a href="https://www.dtf.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-info">D</span> DTF</a>
                       </div>
                 </div>
             </div>
