--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#128102; start_page</title>
+    <title>&#9875; start_page</title>
 
     <link rel="stylesheet" type="text/css" href="./style/bootstrap.min.css">
 </head>
@@ -79,7 +79,6 @@
                           <a href="https://www.youtube.com" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">You</span> Youtube</a>
                           <a href="https://www.vk.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">VK</span> VKontakte</a>
                           <a href="https://www.facebook.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">F</span> Facebook</a>
-                          <a href="https://www.pinterest.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">P</span> Pinterest</a>
                       </div>
                 </div>
             </div>
@@ -129,6 +128,18 @@
                           <a href="https://radio-t.com/" class="list-group-item list-group-item-action"><span class="badge bg-info">T</span> Radio-T</a>
                           <a href="https://beardycast.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">B</span> Beardycast</a>
                           <a href="https://podcast.umputun.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">U</span> UWP</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-light mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128173; Inspiration</h5>
+                      <p class="card-text">Some websites where I take inspiration</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.pinterest.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">P</span> Pinterest</a>
+                          <a href="https://hackaday.io" class="list-group-item list-group-item-action"><span class="badge bg-dark">H</span> Hackaday</a>
                       </div>
                 </div>
             </div>
